rev_17-May_24-09_07

Switched dafault filebrowser settings to all and ckgedit

18 Nov
Fix for HTML in user profile panel

2 Feb 2017
Synched with ckgedit

3 March 
remove backslashes from ends of blockquote

Mar 21
Converted all uses of ckgedit to ckgdoku in code; now it loads as plugin ckgdoku

Mar 22
ckgedit/ckgdoku warning: one must be disabled (meta.php)

Mar 23
updated localization of symlink creation in meta.php

Mar 24
Merged trans into master

Mar 28
Fix in script.js for assigning image parameters (size, link, align)

Mar 29
Synced to captcha

Mar 30
Fixed hiding specialized buttons for non-users wehn captcha is on

Apr 1
removed extra / from fileurl sent from media manager to ckeditor link dialog in script.js (pull  #9) 

Apr 4
Moved javascript from mediamanager.php to scripts/mediamgr.js, loaded by TPL_METAHEADER_OUTPUT.

Apr 5
support for Hover texts on images

Apr 6
Fixes missing curly at end of mediamgr.js

Apr 20
New setting htmbloc_okk gives option of allowing HTML_BLOCKs without setti…ng DW's htmlok to true

Apr 22
Double click edit section opens dw editor

Apr 23
Implemented reminders of new double-click feature for Admins

May 2
Fixed bug in meta.php htmblock_ok -> htmlblock_ok for getting config option

May 4
Added Geshi plugin

May 5
refactored geshi.js->getHref()

May 6
tweaked geshi icon
Fixed JS type error for mis-labled fr and de lang files
Geshi German language file contributed by github user

May 7
Placed geshi progamming lang selection into variable (had been hard-coded to java for code blocks)

May 11
Fixed wrong URL to ajax.php when loading GeSHi options (on Nginx)

May 24
Fixed broken list when li contains links
 