@@ -318,12 +318,6 @@ class action_plugin_ckgdoku_edit extends DokuWiki_Action_Plugin {
             $text
           );
 
-         /* \n_ckgdoku_NPBBR_\n: the final \n prevents this from iterfering with next in line markups
-            -- in particular tables which require a new line and margin left 
-           this may leave an empty paragraph in the xhtml, which is removed below 
-         */
-          $text = preg_replace('/<\/(code|file)>(\s*)(?=[^\w])(\s*)/m',"</$1>\n_ckgdoku_NPBBR_\n$2",$text );
-
           $text = preg_replace_callback(
              '/~~START_HTML_BLOCK~~.*?CLOSE_HTML_BLOCK/ms',
                  create_function(
